--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,14 @@
 }
 .left-conatnt{
     width: 40%;
-    padding: 30px 30px 30px 120px;
+    padding: 30px 30px 30px 90px;
 }
 .title{
     font-size: 35px;
     font-weight: 800;
     color: #272727;
     margin-bottom:10px;
-    margin-top: 20px;
+    margin-top: 35px;
 }
 .title-description{
     font-size: 10px;
@@ -40,13 +40,14 @@ button.btn {
     margin-top: 10px;
 }
 .image{
-    margin-top: 25px;
+    margin-top: 30px;
     width: 250px;
-    height: 300px;
-    margin-right: 70px;
+    height: 335px;
+    margin-right: 80px;
 }
 .banner-container{
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
+/* header section end  */
